@@ -1,7 +1,7 @@
 This mod offers you leveling systems for you game.
 Those leveling systems can be used just for fun, or to increase the challenge and gameplay time of your game.
 
-Multiplayer is currently in testing right now, and there's only one game mode active, which is N Terraria's Regular RPG Mode, with a number of tweaks.
+Multiplayer is currently in testing right now, and there's only two game modes active, which are N Terraria's Regular RPG Mode, with a number of tweaks.
 
 If mana cap is kicking your behind, use this mod alongside it to remove the cap:
 https://steamcommunity.com/sharedfiles/filedetails/?id=2822733353&searchtext=mana+cap
@@ -22,5 +22,8 @@ https://bisecthosting.com/nakano15
 If you want to give me your support in another way.
 Either send me your cheers, or use the link bellow.
 https://ko-fi.com/nakano15
+
+Check out my Itch.IO page projects, if you're interested on what I do.
+https://nakano15.itch.io
 
 Enjoy :)
